@@ -735,12 +735,10 @@ sub font_xml_parse
 
 sub font_test
 {
-  my $dir = shift;
-  my $fonts = [];
+  my $dir = shift || return;
 
   # FIXME: Report.
-  $fonts = &gp_invoke ($dir, 0) if (-e $dir);
-
+  my $fonts = &gp_invoke (join (" ", @$dir), 0) if scalar @$dir;
   return $fonts;
 }
 
