@@ -1,3 +1,13 @@
+2001-12-10  Tambet Ingo  <tambet@ximian.com>
+
+	* general.pl.in (xst_directive_run): Fixed it so it handles
+	varargs right.
+
+	* font.pl.in (font_test): Made it to be able to accept list
+	of directories (and/or files) to look fonts from.
+
+	* font-conf.in (test): Ditto.
+
 2001-12-07  Tambet Ingo  <tambet@ximian.com>
 
 	* font.pl.in: Added checks to get gnome-print's $DATADIR
